plugins {
    id 'org.springframework.boot' version '2.1.8.RELEASE'
    id 'io.spring.dependency-management' version '1.0.8.RELEASE'
    id 'java'
}

group = 'io.joshuatcasey.examples'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '12'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.junit.jupiter:junit-jupiter-api'
	testImplementation 'org.junit.jupiter:junit-jupiter-params'
	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
}

// https://docs.gradle.org/current/userguide/java_testing.html
test {
	useJUnitPlatform()
}

// https://blog.codefx.org/java/enable-preview-language-features/
compileJava {
    options.compilerArgs += ["--enable-preview", "-Xlint:preview"]
}
compileTestJava {
    options.compilerArgs += ["--enable-preview", "-Xlint:preview"]
}
test {
    jvmArgs '--enable-preview'
}